RESOLVED FIXED 249763
[@property] Inline style should not validate registered property custom values
https://bugs.webkit.org/show_bug.cgi?id=249763
Summary [@property] Inline style should not validate registered property custom values
Antti Koivisto
Reported 2022-12-22 01:11:55 PST
Validation is supposed to happen at computed value time only. https://drafts.css-houdini.org/css-properties-values-api/#parsing-custom-properties
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-22 01:13:33 PST
Antti Koivisto
Comment 2 2022-12-22 01:18:11 PST
EWS
Comment 3 2022-12-22 06:25:58 PST
Committed 258240@main (e78366ee2460): <https://commits.webkit.org/258240@main> Reviewed commits have been landed. Closing PR #7999 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.