[@property] Inline style should not validate registered custom property values https://bugs.webkit.org/show_bug.cgi?id=249763 <rdar://problem/103629699>

Reviewed by Tim Nguyen.

Validation is supposed to happen at computed value time only.

https://drafts.css-houdini.org/css-properties-values-api/#parsing-custom-properties

* LayoutTests/css-custom-properties-api/inline-expected.txt:
* LayoutTests/css-custom-properties-api/inline.html:

Update this test to the correct behavior.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/registered-property-cssom-expected.txt:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::processIterableKeyframes):
(WebCore::processPropertyIndexedKeyframes):
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::commitStyles):
* Source/WebCore/css/PropertySetCSSStyleDeclaration.cpp:
(WebCore::PropertySetCSSStyleDeclaration::setProperty):
* Source/WebCore/css/StyleProperties.cpp:
(WebCore::MutableStyleProperties::setCustomProperty):

Stop validating registered properties against the syntax.

* Source/WebCore/css/StyleProperties.h:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeCustomPropertyValueWithSyntax):
(WebCore::CSSPropertyParser::canParseTypedCustomPropertyValue): Deleted.
* Source/WebCore/css/parser/CSSPropertyParser.h:
* Source/WebCore/dom/StyledElement.cpp:
(WebCore::StyledElement::setInlineStyleCustomProperty):

Canonical link: https://commits.webkit.org/258240@main